@@ -1,3 +1,8 @@
+2007-04-10  Richard Henderson  <rth@redhat.com>
+
+	* ldlang.c (relax_sections): Initialize and increment
+	link_info.relax_trip.
+
 2007-04-04  Paul Brook  <paul@codesourcery.com>
 
 	* configure.tgt: Loosen checks for arm uclinux eabi targets.
